--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,86 @@
 body{
-  background-image: url(./assets/image.png);
-}
 
-.container {
-  width: 50%;
-  margin-left: 25%;
-  font-family: Arial, Helvetica, sans-serif;
-  border-radius: 20px;
   background-color: #ffebcd;
   text-align: center;
-  min-height: 15rem;
-  height: auto;
-  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
-li {
-  list-style:  none;
+.filtered-pokemon{
+  width: 50%;
+  max-height: 65vh;
+  overflow-y: scroll;
+  background-color: white;
+  margin-left: 10rem;
+  margin-top: 7rem;
 }
-button {
-  width: 110px;
-  height: 25px;
-  border-radius: 5px;
+.pokemon:hover{
+  transform: scale(1.1);
+}
+.filtered-pokemon img{
+  width: 150px;
+}
+.button-ability button{
+  margin-right: 10px;
+  background-color: #c84d4e;
+  color: white;
+  border-radius: 10px;
   border: none;
-  background-color: #a26e0c;
-  font-size: 18px;
-  color: #fff;
-  margin-left: 10px;
+  height: 30px;
+
+}
+.next , .prev{
+  background-color: #c84d4e;
+  color: white;
+  width: 100px;
+  margin-left: 35%;
+  height: 30px;
+  border: none;
+  border-radius: 20px;
   cursor: pointer;
 }
-input {
-  width: 35%;
+.filtered-pokemon h2{
+  text-transform: uppercase;
+}
+.container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.pokemon-display{
+  width: 90%;
+  margin-left: 5%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: 5rem;
+}
+.pokemon{
+  background-color: #97e7fe;
+  height: 100px;
   border-radius: 20px;
-  height: 22px;
+  cursor: pointer;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 767px){
   .container{
+    grid-template-columns: 1fr;
+  }
+  .pokemon-display{
     width: 100%;
     margin-left: 0;
+  }
+  .filtered-pokemon{
+    width: 100%;
+    margin: 0;
+    margin-top: 10rem;
+  }
+
+}
+@media (min-width: 768px) and (max-width: 1217px){
+  .filtered-pokemon{
+    width: 90%;
+    margin-left: 2rem;
   }
 }
